--- a/crew.html
+++ b/crew.html
@@ -21,38 +21,77 @@
   		<h1>Step into eternal dusk…</h1>
     </header>
     <main>
-    	<p>Generations have lived and died beneath the starless skies, leaving nothing but a whisper behind. We find our heroes living in a world like our own, yet different in so many ways. No one quite knows when or how it happened, but everyone knows what to call it: the Cataclysm. It is what plucked the sun from the sky and turned the seas an inky black. It is what brought the dead back to haunt us and what gave some the ability to see beyond the veil. Now the denizens of this world live in perpetual dusk, with no end in sight.</p>
 
-    	<p>Set in a bustling port city on the verge of industrialization and reminiscent of our own world’s Victorian era London, Amsterdam, or Venice, the gap between wealth and starvation only grows wider with each passing day. It’s crowded with row-houses, twisting streets, and criss-crossed with hundreds of little waterways and bridges. Each with their own story to tell if you know how to listen. Dehumanizing factories and corrupt bureaucrats rule over the poor but there is no shortage of opportunities for those who know where to look, and aren’t afraid to get their hands dirty. Temptation waits around every corner, and only those who can see the unseen have a chance to survive. Perhaps that could just be you...</p>
-
-    	<p>
-    	<div class="grid-container">
-    		<img src="images/victorian_london.jpg" alt="Victorian Era London">
-    		<img src="images/steampunk_landscape.jpg" alt="Steampunk Landscape">
-    		<img src="images/character_hull.JPEG" alt="Monster lurking over sunken-eyed boy's shoulder">
+    <div class="grid-bio">
+  		<div class="grid-item">
+    		<img src="images/brace.png" class="left" alt="Brace Bookman, cut-throat thief">
     	</div>
-    	</p>
+  		<div class="grid-item">
+  			<h2>Brace Bookman — <span class="nickname">Frog</span></h2>
+  			    <p>
+    			<ul>
+    				<li>Lurk — a stealthy Infiltrator and burglar</li>
+    				<li>Plump, calm, fierce, Severosian</li>
+    				<li>Former Academic</li>
+    				<li>Vice of Pleasure / Blackmarket Delicacies</li>
+    			</ul>
+    			</p>
+    			<p>
+    				Brace is an infiltrator through and through, no security measure can stand between them and a score. Brace's time at the Academy might have ended without a diploma, but it has given them to confidence to take charge of situations and act as a devious leader. Brace still has friends from their days in the Academy, namely the noblewoman Roslyn Kellis. But that time also came with its fair share of rivals, namely Petra from the city clerk's office.
+				</p>
+  		</div>
+  		<div class="grid-item">
+  			<img src="images/cross.png" class="left" alt="Cross Clermont, spirit walker">
+  		</div>  
+  		<div class="grid-item">
+  			<h2>Cross Clermont — <span class="nickname">Twelves</span></h2>
+    		<p>
+    			<ul>
+    				<li>Whisper — An arcane adept and channeler</li>
+    				<li>Brooding, Bony, Iruvian</li>
+    				<li>Former Academic</li>
+    				<li>Vice of Stupor / drinking to excess</li>
+    			</ul>
+    		</p>
+    		<p>
+    		Twelves...no one has ever quite figured out why his nickname is a plural. Just like no one has ever quite figured out why he is so adapt at compelling ghosts. But it might have something to do with why he was kicked out of the Academy just short of graduation. Twelves time at the Academy focused heavily on rituals and the occult, and thanks to Frog's bad influence, a fair share of debauchtery went along with it, which is not always the best combination. It is no surprise then that Twelves and Frog found themselves on the streets and looking to ply their skills to a more interested audience. Twelves' obsessesssion with the occult has led him to some of the darkest parts of the already dark city of Duskvol, and he has made friends with the likes of the vampire Scurlock. Similarly, he has come up against several others lurking in the shadows, who are not too keen to share the space, namely the spirit trafficker Flint.
+			</p>
+  		</div>
+  		<div class="grid-item">
+  			<img src="images/crowl.png" class="left" alt="Crowl Welker, bacchus businessman">
+  		</div>
+  		<div class="grid-item">
+  			<h2>Crowl Welker — <span class="nickname">Byron</span></h2>
+    		<p>
+    			<ul>
+    				<li>Slide — a subtle manipulator and spy</li>
+    				<li>Brooding, delicate, striking Doskvolian</li>
+    				<li>Disgraced Noble</li>
+    				<li>Vice of Pleasure / Dramatic and Scandalous Love Affairs</li>
+    			</ul>
+    		</p>
+    		<p>
+    			No one is going to be accussing Byron of having a plan anytime soon. But that isn't really his style anyway. He was the famed second son of Duskvolian aristocracy. Shipping, art, even orchard management — these were meant to be his trades. But after a rather scandalous love affair came to light, Byron found himself without much of his former glory and comforts. This did not bother Byron too much, beer is cheap, and the thrills of the streets are so much more enticing. Still he finds himself every so often yearning for the ludicrous drama of high society. His time in and out of jail has helped him build up a network of friends inside, namely the jail-bird Harker. But not everyone takes kindly to a nobleman "playing" streeturchin, and he has gotten on the wrong side of Nyryx, the owner of a harlot's house in Nightmarket.
+			</p>
+  		</div>  
+  		<div class="grid-item">
+  			<img src="images/aldo.png" class="left" alt="Portrait of Aldo Banfield, saboteur">
+  		</div>
+  		<div class="grid-item">
+  			<h2>Aldo Banfield — <span class="nickname">Wicker</span></h2>
+    		<p>
+    			<ul>
+    				<li>Leech — a saboteur and technician</li>
+    				<li>Affable, grimy, wiry Doskvolian</li>
+    				<li>Former Apothecary</li>
+    				<li>Vice of the Weird / Curiosity Shop</li>
+    			</ul>
+    		</p>
+    		<p>
+    		For years Wicker worked as a physicker, plying his trade to treat wounds and stabilize the dying. But he found himself increasingly fascinated with the weird maladies that Duskvol seemed to inflict upon its denizens. Bodily humors seemed not to phase him in the least, even when others of his trade would become squeamish. But his willingness to take on jobs and experiment with less savory arts led to several unexpected discoveries in the field of sabotoge and chaos. Unfortunately, his love for the weird has become something of an obsession, always seeking out some new dark mystery within the bowls of Duskvol. To that end he has made many friends in the trade, namely the corpse thief Eckerd, while acquiring rivals in equal share such as the blood dealer Jul.
+			</p></div> 
+</div>
 
-    	<!--images of London, Amsterdam, and Venice in the 1880s)-->
-    	<!--london image from http://1.bp.blogspot.com/-qbzsPj_6S1E/UkARhYI8bxI/AAAAAAAAOls/uk_Zbm_mwFk/s1600/Victorian+London+1888+%281%29.jpg-->
-    	<!--steampunk_landscape from https://i.pinimg.com/originals/72/d3/b6/72d3b6196770e238dfbb43e4be40ddd4.jpg-->
-    	<!--ghost from https://i.pinimg.com/736x/f2/20/1c/f2201cbe75bdec16aad5904bc07b091b--character-ideas-character-inspiration.jpg-->
-
-    	<p>Welcome to Blades in the Dark, a tabletop game developed by John Harper and Evil Hat Productions. This tale follows the (mis)adventures of an up and coming crew of thieves as they struggles to survive under the ever-present boot that is Doskvol. If you’ve liked such shows as Peaky Blinders or dove into the book series Six of Crows, Blades in the Dark might just be for you. For more information, check out the Blades in the Dark website.<p>
-
-    	<p>Our crew is yet unnamed, a fledgling band of spies, thieves, and outcasts eking out an existence in Doskvol’s famed Nightmarket. Each has made a devil’s bargain with the city to survive, and though the gifts it has bestowed upon these rogues the price is high for some. That has not deterred them however, and they intend to ply their trade to the highest bidder as a Shadow crew—wading into the mercurial waters of Doskvol’s underworld. Amongst the crew are the wiry saboteur Aldo Banfield, the brooding nobleman Crowl Welker, the ethereal Cross Clermont, and the cut-throat thief Brace Bookman. Each carries their own obligations and baggage, but for better or worse they have set their sites on a piece of the Doskvol pie. If they can work together, they might not just survive but thrive in the shadows of the city.</p>
-    	<aside>
-    	<div class="portraits">
-    		<img src="images/aldo.png" alt="Portrait of Aldo Banfield, saboteur">
-    		    		<!--<div class="middle"><div class="text">Aldo Banfield</div></div>-->
-    		<img src="images/brace.png" alt="Brace Bookman, cut-throat thief">
-    					<!--<div class="middle"><div class="text">Brace Bookman</div></div>-->
-    		<img src="images/cross.png" alt="Cross Clermont, spirit walker">
-    					<!--<div class="middle"><div class="text">Cross Clermont</div></div>-->
-    		<img src="images/crowl.png" alt="Crowl Welker, bacchus businessman">
-    					<!--<div class="middle"><div class="text">Crowl Welker</div></div>-->
-    	</div>
-    	</aside>
     </main>
 <br><br><br>
     <footer>
@@ -60,5 +99,3 @@
     </footer>
     </body>
 </html>
-
-
