--- a/newspaper.html
+++ b/newspaper.html
@@ -18,41 +18,18 @@
         </ul>
       </nav>
 	<header>
-  		<h1>Step into eternal dusk…</h1>
+  		<h1>The Duskvol Daily</h1>
     </header>
-    <main>
-    	<p>Generations have lived and died beneath the starless skies, leaving nothing but a whisper behind. We find our heroes living in a world like our own, yet different in so many ways. No one quite knows when or how it happened, but everyone knows what to call it: the Cataclysm. It is what plucked the sun from the sky and turned the seas an inky black. It is what brought the dead back to haunt us and what gave some the ability to see beyond the veil. Now the denizens of this world live in perpetual dusk, with no end in sight.</p>
+    <main class="newspaper">
+        <p><h2>Gondoliers Gone Grouchy!</h2></p>
+        <img src="images/gondolier_bw.png" alt="Gondolier sailing through the canals of Duskvol">
+        <!--image from https://i.dailymail.co.uk/i/pix/2010/10/16/article-1321111-0BA0C9BB000005DC-961_634x678.jpg-->
+        <p>Gondoliers throughout the city have gone on strike this week, leading to an almost complete standstill of traffic on the canal throughways that crisscross the city. No word from the gondoliers as to why this has occurred though many speculate it has something to do with the recent influx of <a class="secret" href="secret.html">ghosts plaguing the waters</a>. When questioned by <em>The Duskvol Daily</em> one gondolier pointed out "You'd be unhappy too if you were being paid minimum wage to navigate an ink black canal where at any moment a ghost could pop up and eat you, or worse your paying customer."
+        </p>
+        <p>For now their distress remains a mystery, but surely our wonderous and benevolent governor will have them back to work in no time.</p>
+        <p><h2>Who Is The Weeping Lady? An Investigative Series Part I</h2></p>
+        <p>If you have lived in Duskvol for any amount of time, you will have heard the rumors of the Weeping Lady, an enigmatic figure often associated with the theft of children. For many years, this folk figure was something that only the lower-class of Charhall would tell their children at night or the ladies of the Nightmarket would gossip over. This reporter even recalls his own mother telling him such ghost stories to make sure he behaved. But we grow up, we stop believing in such nonsense, right? But why? We live in a city filled with ghosts and vampires, why not a mythical child stealing woman? Well it seems she is not just the stuff of idle prattle, for Lady Benthamule claims to have seen a shrowded woman on the very night of her daughters disappearance. Why some may cry hysteria, this reporter can't help but wonder if there isn't something more. Something <a href="secret" class="secret">just waiting beneath the surface</a>. Follow along in this ongoing piece of investigative journalism as we explore Who Is the Weeping Lady?
 
-    	<p>Set in a bustling port city on the verge of industrialization and reminiscent of our own world’s Victorian era London, Amsterdam, or Venice, the gap between wealth and starvation only grows wider with each passing day. It’s crowded with row-houses, twisting streets, and criss-crossed with hundreds of little waterways and bridges. Each with their own story to tell if you know how to listen. Dehumanizing factories and corrupt bureaucrats rule over the poor but there is no shortage of opportunities for those who know where to look, and aren’t afraid to get their hands dirty. Temptation waits around every corner, and only those who can see the unseen have a chance to survive. Perhaps that could just be you...</p>
-
-    	<p>
-    	<div class="grid-container">
-    		<img src="images/victorian_london.jpg" alt="Victorian Era London">
-    		<img src="images/steampunk_landscape.jpg" alt="Steampunk Landscape">
-    		<img src="images/character_hull.JPEG" alt="Monster lurking over sunken-eyed boy's shoulder">
-    	</div>
-    	</p>
-
-    	<!--images of London, Amsterdam, and Venice in the 1880s)-->
-    	<!--london image from http://1.bp.blogspot.com/-qbzsPj_6S1E/UkARhYI8bxI/AAAAAAAAOls/uk_Zbm_mwFk/s1600/Victorian+London+1888+%281%29.jpg-->
-    	<!--steampunk_landscape from https://i.pinimg.com/originals/72/d3/b6/72d3b6196770e238dfbb43e4be40ddd4.jpg-->
-    	<!--ghost from https://i.pinimg.com/736x/f2/20/1c/f2201cbe75bdec16aad5904bc07b091b--character-ideas-character-inspiration.jpg-->
-
-    	<p>Welcome to Blades in the Dark, a tabletop game developed by John Harper and Evil Hat Productions. This tale follows the (mis)adventures of an up and coming crew of thieves as they struggles to survive under the ever-present boot that is Doskvol. If you’ve liked such shows as Peaky Blinders or dove into the book series Six of Crows, Blades in the Dark might just be for you. For more information, check out the Blades in the Dark website.<p>
-
-    	<p>Our crew is yet unnamed, a fledgling band of spies, thieves, and outcasts eking out an existence in Doskvol’s famed Nightmarket. Each has made a devil’s bargain with the city to survive, and though the gifts it has bestowed upon these rogues the price is high for some. That has not deterred them however, and they intend to ply their trade to the highest bidder as a Shadow crew—wading into the mercurial waters of Doskvol’s underworld. Amongst the crew are the wiry saboteur Aldo Banfield, the brooding nobleman Crowl Welker, the ethereal Cross Clermont, and the cut-throat thief Brace Bookman. Each carries their own obligations and baggage, but for better or worse they have set their sites on a piece of the Doskvol pie. If they can work together, they might not just survive but thrive in the shadows of the city.</p>
-    	<aside>
-    	<div class="portraits">
-    		<img src="images/aldo.png" alt="Portrait of Aldo Banfield, saboteur">
-    		    		<!--<div class="middle"><div class="text">Aldo Banfield</div></div>-->
-    		<img src="images/brace.png" alt="Brace Bookman, cut-throat thief">
-    					<!--<div class="middle"><div class="text">Brace Bookman</div></div>-->
-    		<img src="images/cross.png" alt="Cross Clermont, spirit walker">
-    					<!--<div class="middle"><div class="text">Cross Clermont</div></div>-->
-    		<img src="images/crowl.png" alt="Crowl Welker, bacchus businessman">
-    					<!--<div class="middle"><div class="text">Crowl Welker</div></div>-->
-    	</div>
-    	</aside>
     </main>
 <br><br><br>
     <footer>
@@ -60,5 +37,3 @@
     </footer>
     </body>
 </html>
-
-
