--- a/crew.html
+++ b/crew.html
@@ -18,7 +18,7 @@
         </ul>
       </nav>
 	<header>
-  		<h1>Meet The Crew Lurking in the Shadows of Duskvol</h1>
+  		<h1>Meet the Shadows of Duskvol</h1>
     </header>
     <main>
 
