--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
 
     	<p>Welcome to Blades in the Dark, a tabletop game developed by John Harper and Evil Hat Productions. This tale follows the (mis)adventures of an up and coming crew of thieves as they struggles to survive under the ever-present boot that is Doskvol. If you’ve liked such shows as Peaky Blinders or dove into the book series Six of Crows, Blades in the Dark might just be for you. For more information, check out the Blades in the Dark website.<p>
 
-    	<p>Our crew is yet unnamed, a fledgling band of spies, thieves, and outcasts eking out an existence in Doskvol’s famed Nightmarket. Each has made a devil’s bargain with the city to survive, and though the gifts it has bestowed upon these rogues the price is high for some. That has not deterred them however, and they intend to ply their trade to the highest bidder as a Shadow crew—wading into the mercurial waters of Doskvol’s underworld. Amongst the crew are the wiry saboteur Aldo Banfield, the brooding nobleman Crowl Welker, the ethereal Cross Clermont, and the cut-throat thief Brace Bookman. Each carries their own obligations and baggage, but for better or worse they have set their sites on a piece of the Doskvol pie. If they can work together, they might not just survive but thrive in the shadows of the city.</p>
+        <p>Unlike other tabletop games, Blades in the Dark uses only six sided die, and instead relies much more heavily on players choice. Like any good heist movie, the stakes are all based around how much a player is willing to gamble. And in Duskvol, the price for failure is always high.</p>
+
+        <p>Through communal storytelling, players create a vibrant and ever changing city, filled with opposing factions, mystical curiosities, as well as friends and rivals. While the city begins a very convoluted place, as the crew gains more influence and understanding doors (or more likely second story windows) are bound to open up for them.</p>
+
+    	<p>Our crew is yet unnamed and untested, a fledgling band of spies, thieves, and outcasts eking out an existence in Doskvol’s famed Nightmarket. Each has made a devil’s bargain with the city to survive, and though the gifts it has bestowed upon these rogues the price is high for some. That has not deterred them however, and they intend to ply their trade to the highest bidder as a Shadow crew—wading into the mercurial waters of Doskvol’s underworld. Amongst the crew are the wiry saboteur Aldo Banfield, the brooding nobleman Crowl Welker, the ethereal Cross Clermont, and the cut-throat thief Brace Bookman. Each carries their own obligations and baggage, but for better or worse they have set their sites on a piece of the Doskvol pie. If they can work together, they might not just survive but thrive in the shadows of the city.</p>
     	<div class="portraits">
-    		<img src="images/aldo.png" alt="Portrait of Aldo Banfield, saboteur">
+    		<a href="crew.html#aldo"><img src="images/aldo.png" alt="Portrait of Aldo Banfield, saboteur"></a>
     		    		<!--<div class="middle"><div class="text">Aldo Banfield</div></div>-->
-    		<img src="images/brace.png" alt="Brace Bookman, cut-throat thief">
+    		<a href="crew.html#brace"><img src="images/brace.png" alt="Brace Bookman, cut-throat thief"></a>
     					<!--<div class="middle"><div class="text">Brace Bookman</div></div>-->
-    		<img src="images/cross.png" alt="Cross Clermont, spirit walker">
+    		<a href="crew.html#cross"><img src="images/cross.png" alt="Cross Clermont, spirit walker"></a>
     					<!--<div class="middle"><div class="text">Cross Clermont</div></div>-->
-    		<img src="images/crowl.png" alt="Crowl Welker, bacchus businessman">
+    		<a href="crew.html#crowl"><img src="images/crowl.png" alt="Crowl Welker, bacchus businessman"></a>
     					<!--<div class="middle"><div class="text">Crowl Welker</div></div>-->
     	</div>
     </main>
@@ -58,5 +62,3 @@
     </footer>
     </body>
 </html>
-
-
