--- a/crew.html
+++ b/crew.html
@@ -18,7 +18,7 @@
         </ul>
       </nav>
 	<header>
-  		<h1>Meet the Shadows of Duskvol</h1>
+  		<h1>Step into eternal dusk…</h1>
     </header>
     <main>
 
@@ -27,7 +27,7 @@
     		<img src="images/brace.png" class="left" alt="Brace Bookman, cut-throat thief">
     	</div>
   		<div class="grid-item">
-  			<h2>Brace Bookman — <span class="nickname">Frog</span></h2>
+  			<h2>Brace Bookman — <span id="frog">Frog</span></h2>
   			    <p>
     			<ul>
     				<li>Lurk — a stealthy Infiltrator and burglar</li>
@@ -44,7 +44,7 @@
   			<img src="images/cross.png" class="left" alt="Cross Clermont, spirit walker">
   		</div>  
   		<div class="grid-item">
-  			<h2>Cross Clermont — <span class="nickname">Twelves</span></h2>
+  			<h2>Cross Clermont — <span id="twelves">Twelves</span></h2>
     		<p>
     			<ul>
     				<li>Whisper — An arcane adept and channeler</li>
@@ -61,7 +61,7 @@
   			<img src="images/crowl.png" class="left" alt="Crowl Welker, bacchus businessman">
   		</div>
   		<div class="grid-item">
-  			<h2>Crowl Welker — <span class="nickname">Byron</span></h2>
+  			<h2>Crowl Welker — <span id="byron">Byron</span></h2>
     		<p>
     			<ul>
     				<li>Slide — a subtle manipulator and spy</li>
@@ -78,7 +78,7 @@
   			<img src="images/aldo.png" class="left" alt="Portrait of Aldo Banfield, saboteur">
   		</div>
   		<div class="grid-item">
-  			<h2>Aldo Banfield — <span class="nickname">Wicker</span></h2>
+  			<h2>Aldo Banfield — <span id="wicker">Wicker</span></h2>
     		<p>
     			<ul>
     				<li>Leech — a saboteur and technician</li>
