--- a/city.html
+++ b/city.html
@@ -21,40 +21,70 @@
   		<h1>Step into eternal dusk…</h1>
     </header>
     <main>
-    	<p>Generations have lived and died beneath the starless skies, leaving nothing but a whisper behind. We find our heroes living in a world like our own, yet different in so many ways. No one quite knows when or how it happened, but everyone knows what to call it: the Cataclysm. It is what plucked the sun from the sky and turned the seas an inky black. It is what brought the dead back to haunt us and what gave some the ability to see beyond the veil. Now the denizens of this world live in perpetual dusk, with no end in sight.</p>
+        <img class="map" src="images/duskvol_map.jpg" alt="Duskvol Map">
+        <p><h2>Tier*</h2></p>
+        <p> The city is made up of a labyrnth of relationships, represented by a faction mechanic. Each notable faction is ranked by Tier—a measure of wealth, influence, and scale. At the highest level are the Tier V and VI factions, the true powers of the city. Your crew begins at Tier 0.
+        </p>
+        <p>
+        You’ll use your Tier rating to roll dice when you acquire an asset, as well as for any fortune roll for which your crew’s overall power level and influence is the primary trait. Most importantly, your Tier determines the quality level of your items as well as the quality and scale of the gangs your crew employs—and thereby what size of enemy you can expect to handle.
+        </p>
+        <p><h2>Turf</h2></p>
+        <p>One way to contribute to the crew’s development is by acquiring turf. When you seize and hold territory, you establish a more stable basis for your rep. Each piece of turf that you claim represents abstracted support for the crew (often a result of the fear you instill in the citizens on that turf).
+        </p>
+        <p>
+        Turf is marked on your rep tracker (see the example below). Each piece of turf you hold reduces the rep cost to develop by one. So, if you have 2 turf, you need 10 rep to develop. If you have 4 turf, you need 8 rep to develop. You can hold a maximum of 6 turf. When you develop and reset your rep, you keep the marks from all the turf you hold.
+        </p>
+        <p>
+            *Borrowed from <a href="https://bladesinthedark.com/faction-game">https://bladesinthedark.com/faction-game</a>.
+        </p>
+<table>
+        <caption>
+            Factions of Duskvol (thus far)
+        </caption>
+      <thead>
+        <tr>
+        <th scope="col" class="colhead">Listing</th>
+        <th scope="col" class="colhead">Area</th>
+        <th scope="col" class="colhead">Name</th>
+        <th scope="col" class="colhead">Tier</th>
+        <th scope="col" class="colhead">Hold</th>
+        <th scope="col" class="colhead">Standing</th>
+        <th scope="col" class="colhead">Description</th>
+        </tr>
+      </thead>
+      <tbody>
+       <tr>
+         <th scope="row" class="rowhead">1</th>
+         <td>Neighborhood</td>
+         <td>The Nightmarket</td>
+         <td> - </td>
+         <td>Strong</td>
+         <td>+1</td>
+         <td>If you know where to look, you can get just about anything you want at the Nightmarket. While they'll take anyone's coin, they don't care for the uptown elites</td>
+       </tr>
+       <tr>
+         <th scope="row" class="rowhead">2</th>
+         <td>The Fringe</td>
+         <td>The Weeping Lady</td>
+         <td>II</td>
+         <td>Weak</td>
+         <td>+1</td>
+         <td>A charity and pseudo-religion, honoring the first Lod Governor of Doskvol, Lady Devera, said to be a champion for the poor after losing her two children.</td>
+       </tr>
+       <tr>
+         <th scope="row" class="rowhead">3</th>
+         <td>Labor & Trade</td>
+         <td>Gondoliers Union</td>
+         <td>III</td>
+         <td>Strong</td>
+         <td>-1</td>
+         <td>Horses are almost non-existant in Duskvol, and most folks wouldn't be caught dead riding a goat, which leaves the inky water-ways of the city as the most efficient means of travel. And you aren't going to be going anywhere without first paying the gondoliers.</td>
+       </tr>
+      </tbody>
+    </table>
 
-    	<p>Set in a bustling port city on the verge of industrialization and reminiscent of our own world’s Victorian era London, Amsterdam, or Venice, the gap between wealth and starvation only grows wider with each passing day. It’s crowded with row-houses, twisting streets, and criss-crossed with hundreds of little waterways and bridges. Each with their own story to tell if you know how to listen. Dehumanizing factories and corrupt bureaucrats rule over the poor but there is no shortage of opportunities for those who know where to look, and aren’t afraid to get their hands dirty. Temptation waits around every corner, and only those who can see the unseen have a chance to survive. Perhaps that could just be you...</p>
-
-    	<p>
-    	<div class="grid-container">
-    		<img src="images/victorian_london.jpg" alt="Victorian Era London">
-    		<img src="images/steampunk_landscape.jpg" alt="Steampunk Landscape">
-    		<img src="images/character_hull.JPEG" alt="Monster lurking over sunken-eyed boy's shoulder">
-    	</div>
-    	</p>
-
-    	<!--images of London, Amsterdam, and Venice in the 1880s)-->
-    	<!--london image from http://1.bp.blogspot.com/-qbzsPj_6S1E/UkARhYI8bxI/AAAAAAAAOls/uk_Zbm_mwFk/s1600/Victorian+London+1888+%281%29.jpg-->
-    	<!--steampunk_landscape from https://i.pinimg.com/originals/72/d3/b6/72d3b6196770e238dfbb43e4be40ddd4.jpg-->
-    	<!--ghost from https://i.pinimg.com/736x/f2/20/1c/f2201cbe75bdec16aad5904bc07b091b--character-ideas-character-inspiration.jpg-->
-
-    	<p>Welcome to Blades in the Dark, a tabletop game developed by John Harper and Evil Hat Productions. This tale follows the (mis)adventures of an up and coming crew of thieves as they struggles to survive under the ever-present boot that is Doskvol. If you’ve liked such shows as Peaky Blinders or dove into the book series Six of Crows, Blades in the Dark might just be for you. For more information, check out the Blades in the Dark website.<p>
-
-    	<p>Our crew is yet unnamed, a fledgling band of spies, thieves, and outcasts eking out an existence in Doskvol’s famed Nightmarket. Each has made a devil’s bargain with the city to survive, and though the gifts it has bestowed upon these rogues the price is high for some. That has not deterred them however, and they intend to ply their trade to the highest bidder as a Shadow crew—wading into the mercurial waters of Doskvol’s underworld. Amongst the crew are the wiry saboteur Aldo Banfield, the brooding nobleman Crowl Welker, the ethereal Cross Clermont, and the cut-throat thief Brace Bookman. Each carries their own obligations and baggage, but for better or worse they have set their sites on a piece of the Doskvol pie. If they can work together, they might not just survive but thrive in the shadows of the city.</p>
-    	<aside>
-    	<div class="portraits">
-    		<img src="images/aldo.png" alt="Portrait of Aldo Banfield, saboteur">
-    		    		<!--<div class="middle"><div class="text">Aldo Banfield</div></div>-->
-    		<img src="images/brace.png" alt="Brace Bookman, cut-throat thief">
-    					<!--<div class="middle"><div class="text">Brace Bookman</div></div>-->
-    		<img src="images/cross.png" alt="Cross Clermont, spirit walker">
-    					<!--<div class="middle"><div class="text">Cross Clermont</div></div>-->
-    		<img src="images/crowl.png" alt="Crowl Welker, bacchus businessman">
-    					<!--<div class="middle"><div class="text">Crowl Welker</div></div>-->
-    	</div>
-    	</aside>
+    
     </main>
-<br><br><br>
     <footer>
     	<p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
     </footer>
