--- a/city.html
+++ b/city.html
@@ -82,13 +82,19 @@
        </tr>
       </tbody>
     </table>
+<p><h2>Faction Notes</h2></p>
+<p><h3>Gondoliers</h3></p>
+<p>The canal boat operators. Venerated by the ancient tradition. Said to know occult secrets from the many things submerged beneath the inky tide. They're the main means of transportation in the city...say for a quick getaway from a heist, and you've managed to piss them off. Impressive!</p>
 
-    
+<p><h3>The Weeping Lady</h3></p>
+<p>A myth to some, but to anyone who has grown up on the street an all too real presence. To the uninitiated the organization is a band of child stanchers, controlled by the machniations of a madwoman. Yet you've seen first hand the opportunities and care the organization gives to the runaways (or often the thrownaways). You've helped them out, and they are bound to return the favor with their network of streeturchins and thieves</p>
+
+<p><h3>The Nightmarket</h3></p>
+<p>If you ask anyone where the heart of commerce is, they'll say uptown with the big wigs and government folks, but if you ask anyone where the heart of the city is, they'll tell you the Nightmarket. It is the part of the city that never sleeps, and in fact relishes the liminal state it seems to exist in--one foot in legitimate commerce, one in the exotic. Since your crew is set up in this part of town, it's best to stay on their good side.</p>
     </main>
+    <br><br><br>
     <footer>
     	<p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
     </footer>
     </body>
 </html>
-
-
