--- a/city.html
+++ b/city.html
@@ -69,7 +69,7 @@
          <td>II</td>
          <td>Weak</td>
          <td>+1</td>
-         <td>A charity and pseudo-religion, honoring the first Lod Governor of Doskvol, Lady Devera, said to be a champion for the poor after losing her two children.</td>
+         <td>A charity and pseudo-religion, honoring the first Lord Governor of Doskvol, Lady Devera, said to be a champion for the poor after losing her two children.</td>
        </tr>
        <tr>
          <th scope="row" class="rowhead">3</th>
