--- a/city.html
+++ b/city.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565284-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -29,8 +29,127 @@
 	<header>
   		<h1>Step into eternal dusk…</h1>
     </header>
-    <main>
-        <img class="map" src="images/duskvol_map.jpg" alt="Duskvol Map">
+    <main id="main">
+        <div class="grid-container">
+
+        <!--Bluecoats image from Carnval Row on Amazon Prime https://vignette.wikia.nocookie.net/carnival-row/images/5/5c/Charakter_Dombey.png/revision/latest?cb=20190918153852&path-prefix=de-->
+<div class="flip-card" tabindex="0">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+        <img src="images/factions/bluecoats.png" alt="Bluecoat with muttonchops">
+    </div>
+    <div class="flip-card-back">
+      <h2>The Blue Coats</h2>
+      <h3>Institutions of the City</h3>
+      <p>The City Watch of Duskvol, tasked with upholding the law. Known as the meanest gang in the city. Corrupt, violent, and cruel</p>
+    </div>
+  </div>
+</div>
+        <!--Spirit Warden from Deviant Art Page of Mitchell Nolte https://www.deviantart.com/mitchellnolte/art/Plague-Doctor-216755512-->
+<div class="flip-card" tabindex="0">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+        <img src="images/factions/spiritwarden.jpg" alt="Masked Spiritwarden">
+    </div>
+    <div class="flip-card-back">
+      <h2>The Spiritwardens</h2>
+      <h3>Institution of the City</h3>
+      <p>The bronze-masked hunters who destory rogue spirits. Also run Bellweather Crematorium and research artifacts scanged in the deathlands. Membership is a secret.</p>
+    </div>
+  </div>
+</div>
+        <!--Leviathan Hunters from Ramses Melendez Artstation https://cdnb.artstation.com/p/assets/images/images/004/060/003/large/ramses-melendez-leviathan-1.jpg?1479923954-->
+<div class="flip-card" tabindex="0">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+        <img src="images/factions/leviathan_hunters.jpg" alt="Leviathan Approaching a Ship">
+    </div>
+    <div class="flip-card-back">
+      <h2>Leviathan Hunters</h2>
+      <h3>Institutions of the City</h3>
+      <p>The daring captains and crews that grapple with the titanic demons of the Void Sea to drain their blood for processing into electroplasm</p>
+    </div>
+  </div>
+</div>
+        <!--from the Blades in the Dark Kickstarter https://www.kickstarter.com/projects/2080350433/blades-in-the-dark-->
+<div class="flip-card" tabindex="0">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+        <img src="images/factions/wraiths.jpg" alt="A shadowed thief leaps through the air">
+    </div>
+    <div class="flip-card-back">
+      <h2>The Wraiths</h2>
+      <h3>Underworld Organization</h3>
+      <p>A mysterious crew of masked thieves and spies</p>
+    </div>
+  </div>
+</div>
+        <!--From in active Etsy account: https://www.etsy.com/listing/208692763/ https://img1.etsystatic.com/049/0/5452480/il_570xN.673117033_t3hy.jpg-->
+<div class="flip-card" tabindex="0">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+        <img src="images/factions/hive.jpg" alt="ornate golden broach of two bees on black surface">
+    </div>
+    <div class="flip-card-back">
+      <h2>The Hive</h2>
+      <h3>Underworld Organization</h3>
+      <p>A guild of merchants who secretly trade in contraband. Named for their symbol, a golden bee.</p>
+    </div>
+  </div>
+</div>
+        <!--From Assassin's Creed IV, specifically this fan site https://www.planetminecraft.com/skin/edward-kenway-assassins-creed-iv-2880210/-->
+<div class="flip-card" tabindex="0">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+            <img src="images/factions/red_sash.png" alt="A hooded assassin with two swords drawn and a distinct red sash around waist">
+    </div>
+    <div class="flip-card-back">
+      <h2>The Red Sash</h2>
+      <h3>Underworld Organization</h3>
+      <p>Originally an Iruvian school of swordsmanship, it has since expanded into more nefarious operations</p>
+    </div>
+  </div>
+</div>
+        <!--https://www.storenvy.com/products/18148337-la-llorona-11x17/v/50935013?item_group_id=18148337-->
+<div class="flip-card" tabindex="0">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+            <img src="images/factions/weepinglady.jpg" alt="The Weeping Woman holds the hands of two shadowed children">
+    </div>
+    <div class="flip-card-back">
+      <h2>The Weeping Woman</h2>
+      <h3>Society's Fringe</h3>
+      <p>A charity and pseudo-religion, acting as champions of the poor and especially orphaned children</p>
+    </div>
+  </div>
+</div>
+        <!--http://victorian-era.org/victorian-spiritualism-spiritualists.html-->
+<div class="flip-card" tabindex="0">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+        <img src="images/factions/echo.jpg" alt="Victorian Era photograph of a seance">
+    </div>
+    <div class="flip-card-back">
+      <h2>The Path of Echoes</h2>
+      <h3>Society's Fringe</h3>
+      <p>A mysterious cult that borders on open rebellion against spirit laws. They revere the ancients and seek to gain knowledge from the past--including consorting with ghosts or even letting them possess hosts</p>
+    </div>
+  </div>
+</div>
+        <!--https://flabergastertron.tumblr.com/post/30795246878-->
+<div class="flip-card" tabindex="0">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+        <img src="images/factions/deathland_scavenger2.jpg" alt="Scavenger of the desert with large sword and intimidating mask">
+    </div>
+    <div class="flip-card-back">
+      <h2>Deathland Scavenger</h2>
+      <h3>Society's Fringe</h3>
+      <p>Convicts from Ironhook and desperate freelancers who roam the wasteland beyond the lightning barriers</p>
+    </div>
+  </div>
+</div>
+        </div>
         <p><h2>Tier*</h2></p>
         <p> The city is made up of a labyrnth of relationships, represented by a faction mechanic. Each notable faction is ranked by Tier—a measure of wealth, influence, and scale. At the highest level are the Tier V and VI factions, the true powers of the city. Your crew begins at Tier 0.
         </p>
