--- a/city.html
+++ b/city.html
@@ -36,7 +36,7 @@
 <div class="flip-card" tabindex="0">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-        <img src="images/factions/bluecoats.png" alt="Bluecoat with muttonchops">
+        <img src="images/Factions/bluecoats.png" alt="Bluecoat with muttonchops">
     </div>
     <div class="flip-card-back">
       <h2>The Blue Coats</h2>
@@ -49,7 +49,7 @@
 <div class="flip-card" tabindex="0">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-        <img src="images/factions/spiritwarden.jpg" alt="Masked Spiritwarden">
+        <img src="images/Factions/spiritwarden.jpg" alt="Masked Spiritwarden">
     </div>
     <div class="flip-card-back">
       <h2>The Spiritwardens</h2>
@@ -62,7 +62,7 @@
 <div class="flip-card" tabindex="0">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-        <img src="images/factions/leviathan_hunters.jpg" alt="Leviathan Approaching a Ship">
+        <img src="images/Factions/leviathan_hunters.jpg" alt="Leviathan Approaching a Ship">
     </div>
     <div class="flip-card-back">
       <h2>Leviathan Hunters</h2>
@@ -75,7 +75,7 @@
 <div class="flip-card" tabindex="0">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-        <img src="images/factions/wraiths.jpg" alt="A shadowed thief leaps through the air">
+        <img src="images/Factions/wraiths.jpg" alt="A shadowed thief leaps through the air">
     </div>
     <div class="flip-card-back">
       <h2>The Wraiths</h2>
@@ -88,7 +88,7 @@
 <div class="flip-card" tabindex="0">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-        <img src="images/factions/hive.jpg" alt="ornate golden broach of two bees on black surface">
+        <img src="images/Factions/hive.jpg" alt="ornate golden broach of two bees on black surface">
     </div>
     <div class="flip-card-back">
       <h2>The Hive</h2>
@@ -101,7 +101,7 @@
 <div class="flip-card" tabindex="0">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-            <img src="images/factions/red_sash.png" alt="A hooded assassin with two swords drawn and a distinct red sash around waist">
+            <img src="images/Factions/red_sash.png" alt="A hooded assassin with two swords drawn and a distinct red sash around waist">
     </div>
     <div class="flip-card-back">
       <h2>The Red Sash</h2>
@@ -114,7 +114,7 @@
 <div class="flip-card" tabindex="0">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-            <img src="images/factions/weepinglady.jpg" alt="The Weeping Woman holds the hands of two shadowed children">
+            <img src="images/Factions/weepinglady.jpg" alt="The Weeping Woman holds the hands of two shadowed children">
     </div>
     <div class="flip-card-back">
       <h2>The Weeping Woman</h2>
@@ -127,7 +127,7 @@
 <div class="flip-card" tabindex="0">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-        <img src="images/factions/echo.jpg" alt="Victorian Era photograph of a seance">
+        <img src="images/Factions/echo.jpg" alt="Victorian Era photograph of a seance">
     </div>
     <div class="flip-card-back">
       <h2>The Path of Echoes</h2>
@@ -140,7 +140,7 @@
 <div class="flip-card" tabindex="0">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-        <img src="images/factions/deathland_scavenger2.jpg" alt="Scavenger of the desert with large sword and intimidating mask">
+        <img src="images/Factions/deathland_scavenger2.jpg" alt="Scavenger of the desert with large sword and intimidating mask">
     </div>
     <div class="flip-card-back">
       <h2>Deathland Scavenger</h2>
