--- a/crew.html
+++ b/crew.html
@@ -38,9 +38,12 @@
     <div class="grid-bio">
   		<div class="grid-item">
     		<img src="images/brace.png" class="left" alt="Brace Bookman, cut-throat thief">
+			<div class="caption">
+				<span id="frog">Frog</span>
+			</div>
     	</div>
   		<div class="grid-item">
-  			<h2>Brace Bookman — <span id="frog">Frog</span></h2>
+  			<h2>Brace Bookman</h2>
   			    <p>
     			<ul>
     				<li>Lurk — a stealthy Infiltrator and burglar</li>
