--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
+        <!--font-awesome-->
+
+        <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565284-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -11,68 +17,98 @@
 
   gtag('config', 'UA-159565284-1');
 </script>
+<!--Style Sheets -->
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+<!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Meddon&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
-	<script type="text/javascript" src="js/scripts.js"></script>
+<!--JavaScript-->
+    <script type="text/javascript" src="js/scripts.js"></script>
     <title>Blades in the Dark Ann Arbor</title>
 </head>
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
-      <nav>
-        <ul>
-          <li><a class="active" href="index.html">About</a></li>
-          <li><a href="crew.html">The Crew</a></li>
-          <li><a href="city.html">The City</a></li>
-          <li><a href="#newspaper.html">The Duskvol Daily</a></li>
-        </ul>
-      </nav>
-	<header>
-  		<h1>Step into eternal dusk…</h1>
+    <header>
+        <div class="skip"><a href="#main">Skip to Main Content</a></div>
+        <nav>
+            <ul>
+              <li><a class="active" href="index.html"><i class="fas fa-dungeon"></i>The Game</a></li>
+               <li><a href="map.html">The City</a></li>
+              <li><a href="crew.html">The Crew</a></li>
+              <li><a href="faction.html">The Faction</a></li>
+              <li><a href="newspaper.html">The Duskvol Daily</a></li>
+               <li><a href="contact.html">The Contact</a></li>
+            </ul>
+          </nav>
     </header>
-    <main>
-    	<p>Generations have lived and died beneath the starless skies, leaving nothing but a whisper behind. We find our heroes living in a world like our own, yet different in so many ways. No one quite knows when or how it happened, but everyone knows what to call it: the Cataclysm. It is what plucked the sun from the sky and turned the seas an inky black. It is what brought the dead back to haunt us and what gave some the ability to see beyond the veil. Now the denizens of this world live in perpetual dusk, with no end in sight.</p>
+    <main class="main">
+        <h1 section="world">~The World~</h1>
+        <div class="steampunk" alt="Steampunk Landscape"></div>                      
+                <p>Generations have lived and died beneath the starless skies, leaving nothing but a whisper behind. We find our heroes living in a world like our own, yet different in so many ways. No one quite knows when or how it happened, but everyone knows what to call it: the Cataclysm. It is what plucked the sun from the sky and turned the seas an inky black. It is what brought the dead back to haunt us and what gave some the ability to see beyond the veil. Now the denizens of this world live in perpetual dusk, with no end in sight.</p>
 
-    	<p>Set in a bustling port city on the verge of industrialization and reminiscent of our own world’s Victorian era London, Amsterdam, or Venice, the gap between wealth and starvation only grows wider with each passing day. It’s crowded with row-houses, twisting streets, and criss-crossed with hundreds of little waterways and bridges. Each with their own story to tell if you know how to listen. Dehumanizing factories and corrupt bureaucrats rule over the poor but there is no shortage of opportunities for those who know where to look, and aren’t afraid to get their hands dirty. Temptation waits around every corner, and only those who can see the unseen have a chance to survive. Perhaps that could just be you...</p>
+                 <p>Set in a bustling port city on the verge of industrialization and reminiscent of our own world’s Victorian era London, Amsterdam, or Venice, the gap between wealth and starvation only grows wider with each passing day. It’s crowded with row-houses, twisting streets, and criss-crossed with hundreds of little waterways and bridges. Each with their own story to tell if you know how to listen. Dehumanizing factories and corrupt bureaucrats rule over the poor but there is no shortage of opportunities for those who know where to look, and aren’t afraid to get their hands dirty. Temptation waits around every corner, and only those who can see the unseen have a chance to survive. Perhaps that could just be you...</p>
+        
+                <!--images of London, Amsterdam, and Venice in the 1880s)-->
+                <!--london image from http://1.bp.blogspot.com/-qbzsPj_6S1E/UkARhYI8bxI/AAAAAAAAOls/uk_Zbm_mwFk/s1600/Victorian+London+1888+%281%29.jpg-->
+                <!--steampunk_landscape from https://i.pinimg.com/originals/72/d3/b6/72d3b6196770e238dfbb43e4be40ddd4.jpg-->
+                <!--ghost from https://i.pinimg.com/736x/f2/20/1c/f2201cbe75bdec16aad5904bc07b091b--character-ideas-character-inspiration.jpg-->
 
-    	<p>
-    	<div class="grid-container">
-    		<img src="images/victorian_london.jpg" alt="Victorian Era London">
-    		<img src="images/steampunk_landscape.jpg" alt="Steampunk Landscape">
-    		<img src="images/character_hull.JPEG" alt="Monster lurking over sunken-eyed boy's shoulder">
-    	</div>
-    	</p>
-
-    	<!--images of London, Amsterdam, and Venice in the 1880s)-->
-    	<!--london image from http://1.bp.blogspot.com/-qbzsPj_6S1E/UkARhYI8bxI/AAAAAAAAOls/uk_Zbm_mwFk/s1600/Victorian+London+1888+%281%29.jpg-->
-    	<!--steampunk_landscape from https://i.pinimg.com/originals/72/d3/b6/72d3b6196770e238dfbb43e4be40ddd4.jpg-->
-    	<!--ghost from https://i.pinimg.com/736x/f2/20/1c/f2201cbe75bdec16aad5904bc07b091b--character-ideas-character-inspiration.jpg-->
-
-    	<p>Welcome to Blades in the Dark, a tabletop game developed by John Harper and Evil Hat Productions. This tale follows the (mis)adventures of an up and coming crew of thieves as they struggles to survive under the ever-present boot that is Doskvol. If you’ve liked such shows as Peaky Blinders or dove into the book series Six of Crows, Blades in the Dark might just be for you. For more information, check out the Blades in the Dark website.<p>
-
+                <p>Welcome to Blades in the Dark, a tabletop game developed by John Harper and Evil Hat Productions. This tale follows the (mis)adventures of an up and coming crew of thieves as they struggles to survive under the ever-present boot that is Doskvol. If you’ve liked such shows as Peaky Blinders or dove into the book series Six of Crows, Blades in the Dark might just be for you. For more information, check out the Blades in the Dark website.</p>
+<h1 section="gameplay">~Gameplay~</h1>
+<div class="london" alt="Steampunk Landscape"></div> 
         <p>Unlike other tabletop games, Blades in the Dark uses only six sided die, and instead relies much more heavily on players choice. Like any good heist movie, the stakes are all based around how much a player is willing to gamble. And in Duskvol, the price for failure is always high.</p>
 
         <p>Through communal storytelling, players create a vibrant and ever changing city, filled with opposing factions, mystical curiosities, as well as friends and rivals. While the city begins a very convoluted place, as the crew gains more influence and understanding doors (or more likely second story windows) are bound to open up for them.</p>
 
-    	<p>Our crew is yet unnamed and untested, a fledgling band of spies, thieves, and outcasts eking out an existence in Doskvol’s famed Nightmarket. Each has made a devil’s bargain with the city to survive, and though the gifts it has bestowed upon these rogues the price is high for some. That has not deterred them however, and they intend to ply their trade to the highest bidder as a Shadow crew—wading into the mercurial waters of Doskvol’s underworld. Amongst the crew are the wiry saboteur Aldo Banfield, the brooding nobleman Crowl Welker, the ethereal Cross Clermont, and the cut-throat thief Brace Bookman. Each carries their own obligations and baggage, but for better or worse they have set their sites on a piece of the Doskvol pie. If they can work together, they might not just survive but thrive in the shadows of the city.</p>
-    	<div class="portraits">
-    		<a href="crew.html#aldo"><img src="images/aldo.png" alt="Portrait of Aldo Banfield, saboteur"></a>
-    		    		<!--<div class="middle"><div class="text">Aldo Banfield</div></div>-->
-    		<a href="crew.html#brace"><img src="images/brace.png" alt="Brace Bookman, cut-throat thief"></a>
-    					<!--<div class="middle"><div class="text">Brace Bookman</div></div>-->
-    		<a href="crew.html#cross"><img src="images/cross.png" alt="Cross Clermont, spirit walker"></a>
-    					<!--<div class="middle"><div class="text">Cross Clermont</div></div>-->
-    		<a href="crew.html#crowl"><img src="images/crowl.png" alt="Crowl Welker, bacchus businessman"></a>
-    					<!--<div class="middle"><div class="text">Crowl Welker</div></div>-->
-    	</div>
+        <p>Our crew is yet unnamed and untested, a fledgling band of spies, thieves, and outcasts eking out an existence in Doskvol’s famed Nightmarket. Each has made a devil’s bargain with the city to survive, and though the gifts it has bestowed upon these rogues the price is high for some. That has not deterred them however, and they intend to ply their trade to the highest bidder as a Shadow crew—wading into the mercurial waters of Doskvol’s underworld. Amongst the crew are the wiry saboteur Aldo Banfield, the brooding nobleman Crowl Welker, the ethereal Cross Clermont, and the cut-throat thief Brace Bookman. Each carries their own obligations and baggage, but for better or worse they have set their sites on a piece of the Doskvol pie. If they can work together, they might not just survive but thrive in the shadows of the city.</p>
+
+<h1 section="rules">~Rules~</h1>
+<div class="hull" alt="Steampunk Landscape"></div> 
+<h2>The Game</h2>
+<p>
+Blades in the Dark is a game about a group of daring characters building an enterprising crew. We play to find out if the fledgling crew can thrive amidst the teeming threats that surround it.
+</p>
+
+<h2>The Players</h2>
+<p>
+Each player creates a character and works with the other players to create the crew to which their characters belong. Each player strives to bring their character to life as an interesting, daring character who reaches boldly beyond their current safety and means.
+</p>
+<p>
+The players work together with the Game Master to establish the tone and style of the game by making judgment calls about the mechanics, dice, and consequences of actions. The players take responsibility as co-authors of the game with the GM.
+</p>
+
+<h2>The Characters</h2>
+<p>
+The characters attempt to develop their crew by performing scores and contending with threats from their enemies.
+</p>
+
+<h2>The Crew</h2>
+<p>
+In addition to creating characters, you’ll also create the crew by choosing which type of criminal enterprise you’re interested in exploring.
+</p>
+
+<h2>The Game Master</h2>
+<p>
+The GM establishes the dynamic world around the characters. The GM plays all the non-player characters in the world by giving each one a concrete desire and preferred method of action.
+</p>
+<p>
+The GM helps organize the conversation of the game so it’s pointed toward the interesting elements of play. The GM isn’t in charge of the story and doesn’t have to plan events ahead of time. They present interesting opportunities to the players, then follow the chain of action and consequences wherever they lead.
+</p>
+<h2>Playing A Session</h2>
+<p>
+A session of Blades in the Dark is like an episode of a TV show. There are one or two main events, plus maybe some side-story elements, which all fit into an ongoing series. A session of play can last anywhere from two to six hours, depending on the preferences of the group.
+</p>
+<p>
+During a session, the crew of scoundrels works together to choose a score to accomplish, then they make a few dice rolls to jump into the action of the score in progress. The PCs take actions, suffer consequences, and finish the operation (succeed or fail). Then the crew has downtime, during which they recover, pursue side-projects, and indulge their vices. After downtime, the players once again look for a new opportunity or create their own goals and pursuits, and we play to find out what happens.
+</p>
+
     </main>
-<br><br><br>
     <footer>
-    	<p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
+        <img src="images/banner.png" alt="blades in the dark banner" id="banner">
+        <p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
     </footer>
     </body>
 </html>
