--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ul>
           </nav>
     </header>
-    <main class="main">
+    <main id="main">
         <h1 section="world">~The World~</h1>
         <div class="steampunk" alt="Steampunk Landscape"></div>                      
                 <p>Generations have lived and died beneath the starless skies, leaving nothing but a whisper behind. We find our heroes living in a world like our own, yet different in so many ways. No one quite knows when or how it happened, but everyone knows what to call it: the Cataclysm. It is what plucked the sun from the sky and turned the seas an inky black. It is what brought the dead back to haunt us and what gave some the ability to see beyond the veil. Now the denizens of this world live in perpetual dusk, with no end in sight.</p>
