--- a/crew.html
+++ b/crew.html
@@ -44,7 +44,7 @@
             </ul>
           </nav>
     </header>
-    <main>
+    <main id="main">
       <h1>~The Crew~</h1>
     <div class="crew-grid">
         <div class="grid-item name">
