--- a/faction.html
+++ b/faction.html
@@ -45,6 +45,7 @@
           </nav>
     </header>
     <main id="main">
+      <h1>~Factions of Duskvol~</h1>
       <div class="faction-grid">
         <!--Bluecoats image from Carnval Row on Amazon Prime https://vignette.wikia.nocookie.net/carnival-row/images/5/5c/Charakter_Dombey.png/revision/latest?cb=20190918153852&path-prefix=de-->
 <div class="flip-card" tabindex="0">
@@ -240,5 +241,3 @@
     </footer>
     </body>
 </html>
-
-
