--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <nav>
             <ul>
-              <li><a class="active" href="index.html"><i class="fas fa-dungeon"></i> The Game</a></li>
+              <li><a class="active" href="index.html"><i class="fas fa-dungeon"></i>The Game</a></li>
                <li><a href="map.html">The City</a></li>
               <li><a href="crew.html">The Crew</a></li>
               <li><a href="faction.html">The Faction</a></li>
@@ -45,8 +45,9 @@
           </nav>
     </header>
     <main id="main">
-        <h1 section="world">~The World~</h1>
-        <div class="steampunk" alt="Steampunk Landscape"></div>                      
+        <section class="world">
+        <h1>~The World~</h1>
+        <div class="steampunk"><caption>Steampunk culture is a strong influence</caption></div>                      
                 <p>Generations have lived and died beneath the starless skies, leaving nothing but a whisper behind. We find our heroes living in a world like our own, yet different in so many ways. No one quite knows when or how it happened, but everyone knows what to call it: the Cataclysm. It is what plucked the sun from the sky and turned the seas an inky black. It is what brought the dead back to haunt us and what gave some the ability to see beyond the veil. Now the denizens of this world live in perpetual dusk, with no end in sight.</p>
 
                  <p>Set in a bustling port city on the verge of industrialization and reminiscent of our own world’s Victorian era London, Amsterdam, or Venice, the gap between wealth and starvation only grows wider with each passing day. It’s crowded with row-houses, twisting streets, and criss-crossed with hundreds of little waterways and bridges. Each with their own story to tell if you know how to listen. Dehumanizing factories and corrupt bureaucrats rule over the poor but there is no shortage of opportunities for those who know where to look, and aren’t afraid to get their hands dirty. Temptation waits around every corner, and only those who can see the unseen have a chance to survive. Perhaps that could just be you...</p>
@@ -54,19 +55,22 @@
                 <!--images of London, Amsterdam, and Venice in the 1880s)-->
                 <!--london image from http://1.bp.blogspot.com/-qbzsPj_6S1E/UkARhYI8bxI/AAAAAAAAOls/uk_Zbm_mwFk/s1600/Victorian+London+1888+%281%29.jpg-->
                 <!--steampunk_landscape from https://i.pinimg.com/originals/72/d3/b6/72d3b6196770e238dfbb43e4be40ddd4.jpg-->
-                <!--ghost from https://i.pinimg.com/736x/f2/20/1c/f2201cbe75bdec16aad5904bc07b091b--character-ideas-character-inspiration.jpg-->
+                <!--ghost from https://i.pinimg.com/736x/f2/20/1c/f2201cbe75bdec16aad5904bc07b091b-character-ideas-character-inspiration.jpg-->
 
                 <p>Welcome to Blades in the Dark, a tabletop game developed by John Harper and Evil Hat Productions. This tale follows the (mis)adventures of an up and coming crew of thieves as they struggles to survive under the ever-present boot that is Doskvol. If you’ve liked such shows as Peaky Blinders or dove into the book series Six of Crows, Blades in the Dark might just be for you. For more information, check out the Blades in the Dark website.</p>
-<h1 section="gameplay">~Gameplay~</h1>
-<div class="london" alt="Steampunk Landscape"></div> 
+        </section>
+        <section class="gameplay">
+            <h1>~Gameplay~</h1>
+<div class="london"><caption>A city street in victorian era london</caption></div> 
         <p>Unlike other tabletop games, Blades in the Dark uses only six sided die, and instead relies much more heavily on players choice. Like any good heist movie, the stakes are all based around how much a player is willing to gamble. And in Duskvol, the price for failure is always high.</p>
 
         <p>Through communal storytelling, players create a vibrant and ever changing city, filled with opposing factions, mystical curiosities, as well as friends and rivals. While the city begins a very convoluted place, as the crew gains more influence and understanding doors (or more likely second story windows) are bound to open up for them.</p>
 
         <p>Our crew is yet unnamed and untested, a fledgling band of spies, thieves, and outcasts eking out an existence in Doskvol’s famed Nightmarket. Each has made a devil’s bargain with the city to survive, and though the gifts it has bestowed upon these rogues the price is high for some. That has not deterred them however, and they intend to ply their trade to the highest bidder as a Shadow crew—wading into the mercurial waters of Doskvol’s underworld. Amongst the crew are the wiry saboteur Aldo Banfield, the brooding nobleman Crowl Welker, the ethereal Cross Clermont, and the cut-throat thief Brace Bookman. Each carries their own obligations and baggage, but for better or worse they have set their sites on a piece of the Doskvol pie. If they can work together, they might not just survive but thrive in the shadows of the city.</p>
-
-<h1 section="rules">~Rules~</h1>
-<div class="hull" alt="Steampunk Landscape"></div> 
+    </section>
+<section class="rules">
+<h1>~Rules~</h1>
+<div class="hull"><caption>A Hull Behind a Man</caption></div> 
 <h2>The Game</h2>
 <p>
 Blades in the Dark is a game about a group of daring characters building an enterprising crew. We play to find out if the fledgling crew can thrive amidst the teeming threats that surround it.
@@ -104,7 +108,7 @@ A session of Blades in the Dark is like an episode of a TV show. There are one o
 <p>
 During a session, the crew of scoundrels works together to choose a score to accomplish, then they make a few dice rolls to jump into the action of the score in progress. The PCs take actions, suffer consequences, and finish the operation (succeed or fail). Then the crew has downtime, during which they recover, pursue side-projects, and indulge their vices. After downtime, the players once again look for a new opportunity or create their own goals and pursuits, and we play to find out what happens.
 </p>
-
+</section>
     </main>
     <footer>
         <img src="images/banner.png" alt="blades in the dark banner" id="banner">
