--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main id="main">
         <section class="world">
         <h1>~The World~</h1>
-        <div class="steampunk"><caption>Steampunk culture is a strong influence</caption></div>                      
+        <div class="steampunk"></div>                      
                 <p>Generations have lived and died beneath the starless skies, leaving nothing but a whisper behind. We find our heroes living in a world like our own, yet different in so many ways. No one quite knows when or how it happened, but everyone knows what to call it: the Cataclysm. It is what plucked the sun from the sky and turned the seas an inky black. It is what brought the dead back to haunt us and what gave some the ability to see beyond the veil. Now the denizens of this world live in perpetual dusk, with no end in sight.</p>
 
                  <p>Set in a bustling port city on the verge of industrialization and reminiscent of our own world’s Victorian era London, Amsterdam, or Venice, the gap between wealth and starvation only grows wider with each passing day. It’s crowded with row-houses, twisting streets, and criss-crossed with hundreds of little waterways and bridges. Each with their own story to tell if you know how to listen. Dehumanizing factories and corrupt bureaucrats rule over the poor but there is no shortage of opportunities for those who know where to look, and aren’t afraid to get their hands dirty. Temptation waits around every corner, and only those who can see the unseen have a chance to survive. Perhaps that could just be you...</p>
@@ -61,7 +61,7 @@
         </section>
         <section class="gameplay">
             <h1>~Gameplay~</h1>
-<div class="london"><caption>A city street in victorian era london</caption></div> 
+<div class="london"></div> 
         <p>Unlike other tabletop games, Blades in the Dark uses only six sided die, and instead relies much more heavily on players choice. Like any good heist movie, the stakes are all based around how much a player is willing to gamble. And in Duskvol, the price for failure is always high.</p>
 
         <p>Through communal storytelling, players create a vibrant and ever changing city, filled with opposing factions, mystical curiosities, as well as friends and rivals. While the city begins a very convoluted place, as the crew gains more influence and understanding doors (or more likely second story windows) are bound to open up for them.</p>
@@ -70,7 +70,7 @@
     </section>
 <section class="rules">
 <h1>~Rules~</h1>
-<div class="hull"><caption>A Hull Behind a Man</caption></div> 
+<div class="hull"></div> 
 <h2>The Game</h2>
 <p>
 Blades in the Dark is a game about a group of daring characters building an enterprising crew. We play to find out if the fledgling crew can thrive amidst the teeming threats that surround it.
