--- a/city.html
+++ b/city.html
@@ -11,6 +11,7 @@
 
   gtag('config', 'UA-159565284-1');
 </script>
+	<link rel='icon' href='favicon.ico' type='image/x-icon'/>
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Meddon&display=swap" rel="stylesheet"> 
